src/documents/styles/style.css.scss
@import 'normalize';
@import 'variables';
@import 'site-wide-styles';
@import 'typography';

/**  Mobile (First) Layout
---------------------------------------------------- */

.section {
	overflow: hidden;
	padding: 3rem;
}

	.section.intro {
		height: 100vh;
		width: 100%;
	}

/**  Mobile (First) Module Styles
---------------------------------------------------- */

.section {

	h1 {
		margin: 0 0 0.89em 0;
		font-family: $headerFont;
		font-size: 2.25em;
		line-height: 0.85em;
		color: $lightFont;
	}

	p {

		&:last-of-type {
			margin-bottom: 0;
		}

	}

}

	.section.intro {

		.logo {
			margin-top: 6.5vh;
		}

		@media (min-width: $smallDeviceMin) {
			.logo {
				margin-top: 7vh;
			}
		}

		.contacts {
			margin-top: 4em;
			text-align: center;
		}

		.title,
		.subtitle,
		.contacts a {
			font-family: $headerFont;
		}

		.title {
			font-family: $headerFont;
			font-size: 3.5em;
			font-weight: normal;
			line-height: 1em;
			margin: 0;
		}

		.subtitle {
			letter-spacing: -0.1rem;
			color: $lightFont;
			margin: 0;

			.separator {
				font-size: 2.6rem;
				line-height: 4rem;
				vertical-align: bottom;
			}
		}

		.contacts {
			width: 100%;

			.twitter,
			.mail,
			.hashtag {
				display: inline-block;
				padding: 0.4rem;
				font-size: 1.4em;
				color: #b8b8b8;
				background: $darkFont;
			}

			.mail {
				margin-top: -1.1rem;
			}

			.hashtag {
				margin-top: -0.9rem;
				transform: rotate(-11deg);
			}

			@media (min-width: $smallDeviceMin) {
				.hashtag {
					position: absolute;
					top: 16vh;
					right: 12vw;
					background: transparent;
					transform: rotate(12deg);
					font-size: 2em;
				}
			}

		}

	}

	.section.registration {

		.register {
			height: 24.2rem;
			margin-bottom: 1.5em;
		}

		.map {
			border-radisu: 0.5rem;
		}

		.map-overlay {
			background:transparent;
			position:relative;
			width:100%;
			height:480px;
			top:480px;
			margin-top:-480px;
		}

		@media (min-width: $smallDeviceMin ) {

			.register {
				height: 20.5rem;
			}

		}

	}

